<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.example.covizi.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/scan_fragment" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.covizi.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.example.covizi.ui.stats.StatisticFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/statistic_fragment" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.covizi.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />

    <fragment
        android:id="@+id/features"
        android:name="com.example.covizi.FeaturesFragment"
        tools:layout="@layout/fragment_features">
    </fragment>
</navigation>