<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.covizi.VaccinationBookingStep3">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.covizi.VaccinationBookingStep3"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/header_bg"
            android:layout_width="match_parent"
            android:layout_marginTop="-15dp"
            android:layout_height="220dp"
            android:elevation="50dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vaccination_booking"
                android:gravity="center_horizontal"
                android:fontFamily="@font/oxygen_bold"
                android:textColor="@color/White"
                android:layout_marginTop="40dp"
                android:layout_marginStart="60dp"
                android:textSize="30sp"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/back_btn"
                android:layout_marginStart="10dp"
                android:layout_gravity="left"
                android:onClick="back"
                android:layout_marginTop="50dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp">

                <TextView
                    android:id="@+id/txtPersonalDetails_VB"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/personal_details"
                    android:fontFamily="@font/oxygen"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtHealth_details_VB"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/health_details"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/txtVaccinationDetails_VB"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/vaccination_details"
                    android:textColor="@color/Accent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="15dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="180dp"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="@color/grey"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title_vaccinationConsentForm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/oxygen_bold"
                    android:text="Vaccination Details"
                    android:textAlignment="center"
                    android:textColor="@color/blue"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/vb_vd_Q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_vaccinationConsentForm"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/oxygen_bold"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/vb_vd_Q1"
                    android:textColor="@color/black"
                    android:textSize="15sp" />


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="#FFFFFF"
                    android:layout_below="@+id/vb_vd_Q1"
                    android:id="@+id/r1"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp">

                    <Spinner
                        android:id="@+id/vb_vd_Q1_Ans"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp" />
                </RelativeLayout>


                <TextView
                    android:id="@+id/vb_vd_Q2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/r1"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/oxygen_bold"
                    android:text="@string/vb_vd_Q2"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/vb_vd_Q2_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vb_vd_Q2"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/oxygen"
                    android:lineSpacingMultiplier="1.2"
                    android:padding="1dp"
                    android:text="@string/vb_vd_Q2_details"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/vb_vd_Q2A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/vb_vd_Q2_details"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/oxygen_bold"
                    android:lineSpacingMultiplier="1.2"
                    android:padding="1dp"
                    android:text="@string/vb_vd_Q2A"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="#FFFFFF"
                    android:layout_below="@+id/vb_vd_Q2A"
                    android:id="@+id/r2"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp">

                    <Spinner
                        android:id="@+id/vb_vd_Q2A_Ans"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp" />
                </RelativeLayout>


                <TextView
                    android:id="@+id/vb_vd_Q2B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/r2"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/oxygen_bold"
                    android:lineSpacingMultiplier="1.2"
                    android:padding="1dp"
                    android:text="@string/vb_vd_Q2b"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="#FFFFFF"
                    android:layout_below="@+id/vb_vd_Q2B"
                    android:id="@+id/r3"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp">

                    <Spinner
                        android:id="@+id/vb_vd_Q2B_Ans"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp" />
                </RelativeLayout>


                <TextView
                    android:id="@+id/vb_vd_Q2C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/r3"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:fontFamily="@font/oxygen_bold"
                    android:lineSpacingMultiplier="1.2"
                    android:padding="1dp"
                    android:text="@string/vb_vd_Q2C"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:background="#FFFFFF"
                    android:layout_below="@+id/vb_vd_Q2C"
                    android:id="@+id/r4"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp">

                    <Spinner
                        android:id="@+id/vb_vd_Q2C_Ans"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txtThanksResponse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/r4"
                    android:layout_gravity="center"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/oxygen"
                    android:text="@string/thank_you_for_your_response"
                    android:textAlignment="center"
                    android:textColor="@color/teal"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button_update"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@id/txtThanksResponse"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/radius"
                    android:elevation="50dp"
                    android:shadowColor="@color/black"
                    android:text="@string/submit"
                    android:onClick="Submit"
                    android:textColor="@color/White"
                    android:textFontWeight="700"
                    android:textSize="17sp"
                    app:backgroundTint="@color/blue" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</ScrollView>