<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MakeReport">

    <androidx.cardview.widget.CardView
        android:id="@+id/header_bg"
        android:layout_width="match_parent"
        android:layout_marginTop="-15dp"
        android:layout_height="220dp"
        android:elevation="50dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_a_report"
            android:gravity="center_horizontal"
            android:fontFamily="@font/oxygen_bold"
            android:textColor="@color/White"
            android:layout_marginTop="40dp"
            android:onClick="back"
            android:layout_marginStart="90dp"
            android:textSize="34sp"/>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/back_btn"
            android:layout_marginStart="20dp"
            android:layout_gravity="left"
            android:onClick="back"
            android:layout_marginTop="50dp"
            tools:ignore="RtlHardcoded" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_makeReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make_a_report"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:textSize="25sp"
                android:textColor="@color/blue"
                android:fontFamily="@font/oxygen_bold"/>

            <TextView
                android:id="@+id/mr_Q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_makeReport"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/oxygen_bold"
                android:text="@string/mr_Q1"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:background="#FFFFFF"
                android:layout_below="@id/mr_Q1"
                android:id="@+id/r1"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp">

                <Spinner
                    android:id="@+id/spinnerQ1_Ans"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/mr_Q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/r1"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/oxygen_bold"
                android:text="@string/mr_Q2"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/mrQ2_Et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_below="@id/mr_Q2"
                android:layout_marginRight="20dp"
                android:hint="Enter location/address...">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mr_Q2_Ans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/mr_Q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mrQ2_Et"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/oxygen_bold"
                android:text="@string/mr_Q3"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/makeReport_Q3_Ans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxCornerRadiusTopStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                android:hint="Describe the action/Incident."
                app:boxCornerRadiusBottomEnd="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/mr_Q3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="5"
                    android:maxLines="10"
                    android:gravity="start"
                    android:background="@color/white"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_mr_submit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/makeReport_Q3_Ans"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/radius"
                android:elevation="50dp"
                android:shadowColor="@color/black"
                android:text="@string/submit"
                android:onClick="Submit"
                android:textColor="@color/White"
                android:textFontWeight="700"
                android:textSize="17sp"
                app:backgroundTint="@color/blue" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>